# ast-visitor-pattern

./: ASTAverage.hh  ASTCollectionIdentifier.hh  ASTFrom.hh  ASTNode.hh  ASTOperation.hh  ASTSelect.hh  ASTVisitor.hh  ASTWhere.hh  CMakeLists.txt  ConcreteVisitor.hh  LogicalAverage.hh  LogicalFilter.hh  LogicalJoin.hh  LogicalOperation.hh  LogicalPlan.hh  README.md  VisitorResult.hh  main.cpp
